--- a/conf/locale/cs/LC_MESSAGES/django.po
+++ b/conf/locale/cs/LC_MESSAGES/django.po
@@ -1,199 +1,329 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-02 15:15+0000\n"
+"POT-Creation-Date: 2016-04-30 18:43+0000\n"
 "PO-Revision-Date: 2016-02-07 06:26+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
-"Language-Team: Czech (http://www.transifex.com/adaptive-learning/slepemapycz/language/cs/)\n"
+"Language-Team: Czech (http://www.transifex.com/adaptive-learning/slepemapycz/"
+"language/cs/)\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
-#: templates/create_goal.html:5
-msgid "Vytvořit cíl"
-msgstr "Vytvořit cíl"
+#: geography/management/commands/generate_concepts.py:76
+msgid "Procvičovat"
+msgstr ""
 
-#: templates/create_goal.html:9
-msgid "Mapa"
-msgstr "Mapa"
-
-#: templates/create_goal.html:36
-msgid "Datum splnění cíle"
-msgstr "Datum splnění cíle"
-
-#: templates/create_goal.html:64
-msgid "Vytvořit"
-msgstr "Vytvořit"
-
-#: templates/create_goal.html:67
-msgid "Zavřít"
-msgstr "Zavřít"
-
-#: templates/generated/homepage.html:19 templates/home.html:60 views.py:35
-msgid "Slepé mapy"
-msgstr "Slepé mapy"
-
-#: templates/generated/homepage.html:21
-msgid "Vyberte si mapu k procvičování:"
-msgstr "Vyberte si mapu k procvičování:"
-
-#: templates/generated/homepage.html:26
-msgid "Státy Evropy"
-msgstr "Státy Evropy"
-
-#: templates/generated/homepage.html:31
-msgid "Řeky ČR"
-msgstr "Řeky ČR"
-
-#: templates/generated/homepage.html:36
-msgid "Státy USA"
-msgstr "Státy USA"
-
-#: templates/generated/homepage.html:41
-msgid "Pohoří ČR"
-msgstr "Pohoří ČR"
-
-#: templates/generated/homepage.html:46
-msgid "Státy Asie"
-msgstr "Státy Asie"
-
-#: templates/generated/homepage.html:51
-msgid "Řeky Afriky"
-msgstr "Řeky Afriky"
-
-#: templates/generated/homepage.html:54
-msgid "Chcete jinou? Podívejte se na"
-msgstr "Chcete jinou? Podívejte se na"
-
-#: templates/generated/homepage.html:57
-msgid "další mapy"
-msgstr "další mapy"
-
-#: templates/generated/homepage.html:67
-msgid "Jak to funguje?"
-msgstr "Jak to funguje?"
-
-#: templates/generated/homepage.html:71
-msgid "Zeměpis hrou"
-msgstr "Zeměpis hrou"
-
-#: templates/generated/homepage.html:72
-msgid "Zeměpis hrou - text"
-msgstr "Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
-
-#: templates/generated/homepage.html:76
-msgid "Adaptabilní procvičování"
-msgstr "Adaptabilní procvičování"
-
-#: templates/generated/homepage.html:77
-msgid "Adaptabilní procvičování - text"
-msgstr "Každá slepá mapa nabízí adaptabilní procvičování  - podle toho, jaké máte vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější."
-
-#: templates/generated/homepage.html:79
-msgid "Ukázka procvičování"
-msgstr "Ukázka procvičování"
-
-#: templates/generated/homepage.html:83
-msgid "Specializovaný systém"
-msgstr "Specializovaný systém"
-
-#: templates/generated/homepage.html:84
-msgid "Specializovaný systém - text"
-msgstr "Procvičování slepých map nabízí i řada jiných výukových systémů, ty však většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
-
-#: templates/generated/homepage.html:88
-msgid "Vizualizace znalostí"
-msgstr "Vizualizace znalostí"
-
-#: templates/generated/homepage.html:89
-msgid "Vizualizace znalostí - text"
-msgstr "Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
-
-#: templates/generated/homepage.html:91
-msgid "Ukázka mapy znalostí"
-msgstr "Ukázka mapy znalostí"
-
-#: templates/generated/homepage.html:95
-msgid "Učení z dat"
-msgstr "Učení z dat"
-
-#: templates/generated/homepage.html:96
-msgid "Učení z dat - text"
-msgstr "Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je těžší poznat Keňu nebo Nigérii."
-
-#: templates/home.html:27
-msgid "meta content"
-msgstr "Inteligentní aplikace na procvičování států, měst, pohoří a řek na slepé mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, USA a dalších států"
-
-#: templates/home.html:28
-msgid "meta keywords"
-msgstr "slepá mapa, státy, města, čr, svět, evropa, amerika, afrika, asie, pohoří, řeky, zeměpis, usa, hry"
-
-#: templates/home.html:64
-msgid "Svět"
-msgstr "Svět"
-
-#: templates/home.html:68
-msgid "Kontinenty"
-msgstr "Kontinenty"
-
-#: templates/home.html:78
-msgid "Státy"
-msgstr "Státy"
-
-#: templates/home.html:87
+#: geography/management/commands/generate_concepts.py:77
+#: geography/templates/home.html:109
 msgid "Přehled map"
 msgstr "Přehled map"
 
-#: templates/home.html:98
+#: geography/management/commands/send_reminder_emails.py:33
+msgid "Víš kde leží"
+msgstr ""
+
+#: geography/templates/create_goal.html:5
+msgid "Vytvořit cíl"
+msgstr "Vytvořit cíl"
+
+#: geography/templates/create_goal.html:9
+msgid "Mapa"
+msgstr "Mapa"
+
+#: geography/templates/create_goal.html:36
+msgid "Datum splnění cíle"
+msgstr "Datum splnění cíle"
+
+#: geography/templates/create_goal.html:64
+msgid "Vytvořit"
+msgstr "Vytvořit"
+
+#: geography/templates/create_goal.html:67
+msgid "Zavřít"
+msgstr "Zavřít"
+
+#: geography/templates/generated/homepage.html:19
+#: geography/templates/home.html:105 geography/views.py:60
+msgid "Slepé mapy"
+msgstr "Slepé mapy"
+
+#: geography/templates/generated/homepage.html:21
+msgid "Vyberte si mapu k procvičování:"
+msgstr "Vyberte si mapu k procvičování:"
+
+#: geography/templates/generated/homepage.html:26
+msgid "Státy Evropy"
+msgstr "Státy Evropy"
+
+#: geography/templates/generated/homepage.html:31
+msgid "Řeky ČR"
+msgstr "Řeky ČR"
+
+#: geography/templates/generated/homepage.html:36
+msgid "Státy USA"
+msgstr "Státy USA"
+
+#: geography/templates/generated/homepage.html:41
+#, fuzzy
+#| msgid "Státy Asie"
+msgid "Státy Afriky"
+msgstr "Státy Asie"
+
+#: geography/templates/generated/homepage.html:46
+#, fuzzy
+#| msgid "Státy Evropy"
+msgid "Města Evropy"
+msgstr "Státy Evropy"
+
+#: geography/templates/generated/homepage.html:51
+#, fuzzy
+#| msgid "Státy USA"
+msgid "Státy Světa"
+msgstr "Státy USA"
+
+#: geography/templates/generated/homepage.html:54
+msgid "Chcete jinou? Podívejte se na"
+msgstr "Chcete jinou? Podívejte se na"
+
+#: geography/templates/generated/homepage.html:59
+msgid "další mapy"
+msgstr "další mapy"
+
+#: geography/templates/generated/homepage.html:65
+msgid "Jak to funguje?"
+msgstr "Jak to funguje?"
+
+#: geography/templates/generated/homepage.html:69
+msgid "Zeměpis hrou"
+msgstr "Zeměpis hrou"
+
+#: geography/templates/generated/homepage.html:70
+msgid "Zeměpis hrou - text"
+msgstr ""
+"Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
+"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
+"zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
+
+#: geography/templates/generated/homepage.html:74
+msgid "Adaptabilní procvičování"
+msgstr "Adaptabilní procvičování"
+
+#: geography/templates/generated/homepage.html:75
+msgid "Adaptabilní procvičování - text"
+msgstr ""
+"Každá slepá mapa nabízí adaptabilní procvičování  - podle toho, jaké máte "
+"vědomosti, aplikace volí podobu otázek (otevřená, výběr z možností) a "
+"frekvenci opakování. Aplikace vám tak předkládá státy, jejichž procvičení je "
+"pro vás nejužitečnější."
+
+#: geography/templates/generated/homepage.html:77
+msgid "Ukázka procvičování"
+msgstr "Ukázka procvičování"
+
+#: geography/templates/generated/homepage.html:81
+msgid "Specializovaný systém"
+msgstr "Specializovaný systém"
+
+#: geography/templates/generated/homepage.html:82
+msgid "Specializovaný systém - text"
+msgstr ""
+"Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
+"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
+"slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
+
+#: geography/templates/generated/homepage.html:86
+msgid "Vizualizace znalostí"
+msgstr "Vizualizace znalostí"
+
+#: geography/templates/generated/homepage.html:87
+msgid "Vizualizace znalostí - text"
+msgstr ""
+"Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní "
+"vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
+
+#: geography/templates/generated/homepage.html:89
+msgid "Ukázka mapy znalostí"
+msgstr "Ukázka mapy znalostí"
+
+#: geography/templates/generated/homepage.html:93
+msgid "Učení z dat"
+msgstr "Učení z dat"
+
+#: geography/templates/generated/homepage.html:94
+msgid "Učení z dat - text"
+msgstr ""
+"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
+"datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je "
+"těžší poznat Keňu nebo Nigérii."
+
+#: geography/templates/home.html:27
+msgid "meta content"
+msgstr ""
+"Inteligentní aplikace na procvičování států, měst, pohoří a řek na slepé "
+"mapě světa, Evropy, Asie, Afriky, Ameriky, ČR, USA a dalších států"
+
+#: geography/templates/home.html:28
+msgid "meta keywords"
+msgstr ""
+"slepá mapa, státy, města, čr, svět, evropa, amerika, afrika, asie, pohoří, "
+"řeky, zeměpis, usa, hry"
+
+#: geography/templates/home.html:112
+msgid "Svět"
+msgstr "Svět"
+
+#: geography/templates/home.html:116
+msgid "Kontinenty"
+msgstr "Kontinenty"
+
+#: geography/templates/home.html:126 geography/views.py:147
+msgid "Státy"
+msgstr "Státy"
+
+#: geography/templates/home.html:138
+msgid "Kraje ČR"
+msgstr ""
+
+#: geography/templates/home.html:156
 msgid ""
 "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše "
 "znalosti pamatoval i příště."
-msgstr "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště."
+msgstr ""
+"Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše "
+"znalosti pamatoval i příště."
 
-#: templates/home.html:101
+#: geography/templates/home.html:159
 msgid "Přihlásit se"
 msgstr "Přihlásit se"
 
-#: templates/home.html:114
+#: geography/templates/home.html:172
 msgid "Můj profil"
 msgstr "Můj profil"
 
-#: templates/home.html:120
+#: geography/templates/home.html:178
 msgid "Moje časté chyby"
 msgstr "Moje časté chyby"
 
-#: templates/home.html:125
+#: geography/templates/home.html:183
 msgid "Osobní cíle"
 msgstr "Osobní cíle"
 
-#: templates/home.html:130
+#: geography/templates/home.html:188
 msgid "Nastavení"
 msgstr "Nastavení"
 
-#: templates/home.html:136
+#: geography/templates/home.html:194
 msgid "Odhlásit se"
 msgstr "Odhlásit se"
 
-#: templates/home.html:177 templates/home.html.py:192
+#: geography/templates/home.html:247 geography/templates/home.html.py:274
 msgid "Napište nám"
 msgstr "Napište nám"
 
-#: templates/home.html:187
+#: geography/templates/home.html:249
+msgid "Skrýt tlačítko"
+msgstr ""
+
+#: geography/templates/home.html:270
 msgid "O projektu"
 msgstr "O projektu"
 
-#: views.py:35
+#: geography/templates/reminder_email.html:10
+#, fuzzy
+#| msgid "Slepé mapy"
+msgid "SlepeMapy.cz"
+msgstr "Slepé mapy"
+
+#: geography/templates/reminder_email.html:17
+#: geography/templates/reminder_email.txt:6
+msgid "Kde leží"
+msgstr ""
+
+#: geography/templates/reminder_email.html:26
+#: geography/templates/reminder_email.txt:8
+msgid "Zjistit odpověď"
+msgstr ""
+
+#: geography/templates/reminder_email.html:34
+#, fuzzy
+#| msgid "Slepé mapy"
+msgid "Slepé mapy.cz"
+msgstr "Slepé mapy"
+
+#: geography/templates/reminder_email.html:41
+#: geography/templates/reminder_email.txt:17
+#, fuzzy
+#| msgid "Odhlásit se"
+msgid "Odhlásit z rozesílky"
+msgstr "Odhlásit se"
+
+#: geography/views.py:60
 msgid "inteligentní aplikace na procvičování zeměpisu"
 msgstr "inteligentní aplikace na procvičování zeměpisu"
+
+#: geography/views.py:148
+msgid "Regiony"
+msgstr ""
+
+#: geography/views.py:149
+msgid "Provincie"
+msgstr ""
+
+#: geography/views.py:150
+msgid "Kraje"
+msgstr ""
+
+#: geography/views.py:151
+msgid "Oblasti"
+msgstr ""
+
+#: geography/views.py:152
+msgid "Autonomní společenství"
+msgstr ""
+
+#: geography/views.py:153
+msgid "Spolkové země"
+msgstr ""
+
+#: geography/views.py:154
+msgid "Města"
+msgstr ""
+
+#: geography/views.py:155
+#, fuzzy
+#| msgid "Řeky ČR"
+msgid "Řeky"
+msgstr "Řeky ČR"
+
+#: geography/views.py:156
+msgid "Jezera"
+msgstr ""
+
+#: geography/views.py:157
+msgid "Moře"
+msgstr ""
+
+#: geography/views.py:158
+#, fuzzy
+#| msgid "Pohoří ČR"
+msgid "Pohoří"
+msgstr "Pohoří ČR"
+
+#: geography/views.py:159
+msgid "Ostrovy"
+msgstr ""
+
+#~ msgid "Řeky Afriky"
+#~ msgstr "Řeky Afriky"
 
 #~ msgid "Feedback confirmed"
 #~ msgstr ""
