--- a/conf/locale/de/LC_MESSAGES/django.po
+++ b/conf/locale/de/LC_MESSAGES/django.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: slepemapy.cz\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-30 18:43+0000\n"
-"PO-Revision-Date: 2016-04-30 18:44+0000\n"
+"POT-Creation-Date: 2016-05-20 13:03+0000\n"
+"PO-Revision-Date: 2016-05-20 13:09+0000\n"
 "Last-Translator: Vít Stanislav <slaweet@seznam.cz>\n"
 "Language-Team: German (http://www.transifex.com/adaptive-learning/slepemapycz/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -19,17 +19,17 @@ msgstr ""
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: geography/management/commands/generate_concepts.py:76
+#: geography/management/commands/generate_concepts.py:57
 msgid "Procvičovat"
-msgstr ""
+msgstr "Üben"
 
-#: geography/management/commands/generate_concepts.py:77
+#: geography/management/commands/generate_concepts.py:58
 #: geography/templates/home.html:109
 msgid "Přehled map"
 msgstr "Kartenübersicht"
 
 #: geography/management/commands/send_reminder_emails.py:33
-msgid "Víš kde leží"
+msgid "Víš, kde leží"
 msgstr ""
 
 #: geography/templates/create_goal.html:5
@@ -76,17 +76,17 @@ msgstr "Bundesstaaten der Vereinigten Staaten"
 #: geography/templates/generated/homepage.html:41
 #| msgid "Státy Asie"
 msgid "Státy Afriky"
-msgstr ""
+msgstr " Staaten Afrikas"
 
 #: geography/templates/generated/homepage.html:46
 #| msgid "Státy Evropy"
 msgid "Města Evropy"
-msgstr ""
+msgstr "Städte Europas"
 
 #: geography/templates/generated/homepage.html:51
 #| msgid "Státy USA"
 msgid "Státy Světa"
-msgstr ""
+msgstr "Staaten der Welt"
 
 #: geography/templates/generated/homepage.html:54
 msgid "Chcete jinou? Podívejte se na"
@@ -246,40 +246,40 @@ msgstr "intelligente App zum Geographie lernen"
 
 #: geography/views.py:148
 msgid "Regiony"
-msgstr ""
+msgstr "Regionen"
 
 #: geography/views.py:149
 msgid "Provincie"
-msgstr ""
+msgstr "Provinzen"
 
 #: geography/views.py:150
 msgid "Kraje"
-msgstr ""
+msgstr "Regionen"
 
 #: geography/views.py:151
 msgid "Oblasti"
-msgstr ""
+msgstr "Gebiete"
 
 #: geography/views.py:152
 msgid "Autonomní společenství"
-msgstr ""
+msgstr "Autonomiegebiete"
 
 #: geography/views.py:153
 msgid "Spolkové země"
-msgstr ""
+msgstr "Bundesländer"
 
 #: geography/views.py:154
 msgid "Města"
-msgstr ""
+msgstr "Städte"
 
 #: geography/views.py:155
 #| msgid "Řeky ČR"
 msgid "Řeky"
-msgstr ""
+msgstr "Flüße"
 
 #: geography/views.py:156
 msgid "Jezera"
-msgstr ""
+msgstr "Seen"
 
 #: geography/views.py:157
 msgid "Moře"
@@ -288,10 +288,47 @@ msgstr ""
 #: geography/views.py:158
 #| msgid "Pohoří ČR"
 msgid "Pohoří"
-msgstr ""
+msgstr "Gebirge"
 
 #: geography/views.py:159
 msgid "Ostrovy"
+msgstr "Inseln"
+
+#: geography/views.py:160
+#| msgid "Státy USA"
+msgid "Státy skrze hlavní města"
+msgstr ""
+
+#: geography/views.py:161
+msgid "Okresy"
+msgstr ""
+
+#: geography/views.py:162
+msgid "Hlavní města skrze státy"
+msgstr ""
+
+#: geography/views.py:163
+msgid "Vodní nádrže"
+msgstr ""
+
+#: geography/views.py:164
+msgid "Povrch"
+msgstr ""
+
+#: geography/views.py:165
+msgid "CHKO a NP"
+msgstr ""
+
+#: geography/views.py:166
+msgid "Obce s rozšířenou působností"
+msgstr ""
+
+#: geography/views.py:167
+msgid "Obce s pověřeným obecním úřadem"
+msgstr ""
+
+#: geography/views.py:168
+msgid "Maloplošná zvláštně chráněná území"
 msgstr ""
 
 #~ msgid "Řeky Afriky"
