--- a/geography/static/po/en.po
+++ b/geography/static/po/en.po
@@ -180,7 +180,7 @@ msgid "Kraje ČR"
 msgstr "Czech regions"
 
 #: static/js/services.js:310
-msgid "Maloplošná zvláštně chráněná území"
+msgid "Maloplošná zvláště chráněná území"
 msgstr ""
 
 #: static/tpl/practice_tpl.html:100
